# Safety-Watchdog

./: CMakeLists.txt  OUTPUT.md  README.md
.claude/: settings.local.json
include/: estop.h  heartbeat.h  watchdog_logic.h
scripts/: run_faults.sh
src/: control.cpp  estop.cpp  main.cpp  watchdog.cpp  watchdog_logic.cpp
tests/: fault_injection_test.cpp  watchdog_logic_test.cpp
